--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,16 +2,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ug.co.cherrymusic.cherrymusic.HomeFragment">
+    tools:context="ug.co.cherrymusic.cherrymusic.HomeFragment"
+    android:background="#c2fafafa">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <!--
+      <TextView
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:text="Home Fragment"
+          android:gravity="center"
+          android:textColor="@color/colorPrimaryDark"/>
+
+  -->
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_home"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Home Fragment"
-        android:gravity="center"
-        android:textColor="@color/colorPrimaryDark"/>
+        android:scrollbars="none"/>
 
-
-
-</FrameLayout>
+  </FrameLayout>
