--- a/app/src/main/res/layout/fragment_music.xml
+++ b/app/src/main/res/layout/fragment_music.xml
@@ -12,4 +12,12 @@
         android:textColor="@color/colorPrimaryDark"
         android:gravity="center"/>
 
+    <Spinner
+        android:layout_marginLeft="@dimen/activity_vertical_margin"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:entries="@array/genres"
+        />
+
 </FrameLayout>
