--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -8,8 +8,10 @@
                 <item name="colorAccent">@color/colorAccent</item>
                 <item name="android:colorBackground">@android:color/background_light</item>
                 <item name="android:textColorPrimary">@android:color/primary_text_light</item>
-                <item name="android:textColorPrimaryInverse">@android:color/primary_text_dark</item>
+                <item name="android:textColorPrimaryInverse">@android:color/secondary_text_light_nodisable</item>
                 <item name="android:navigationBarColor">@color/colorPrimaryDark</item>
                 <item name="android:colorForeground">@android:color/background_dark</item>
+                <item name="android:textColorSecondary">@android:color/secondary_text_dark</item>
+                <item name="android:textColorSecondaryInverse">@android:color/secondary_text_dark</item>
         </style>
 </resources>
