started on music tab testing local music player

--- a/app/src/main/res/layout/fragment_music.xml
+++ b/app/src/main/res/layout/fragment_music.xml
@@ -1,18 +1,12 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ug.co.cherrymusic.cherrymusic.MusicFragment">
+    tools:context="ug.co.cherrymusic.cherrymusic.MusicFragment"
+    android:orientation="vertical">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Music Fragment"
-        android:textColor="@color/colorPrimaryDark"
-        android:gravity="center"/>
-
-    <Spinner
+       <Spinner
         android:layout_marginLeft="@dimen/activity_vertical_margin"
         android:layout_marginTop="@dimen/activity_horizontal_margin"
         android:layout_width="wrap_content"
@@ -20,4 +14,6 @@
         android:entries="@array/genres"
         />
 
-</FrameLayout>
+    <include layout="@layout/recycler_view"/>
+
+</LinearLayout>
